# libxprintf

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
examples/: 01_domain.c  02_comp_exec.c  Makefile.am  xprintf_callback.c
lib/: Makefile.am
lib/Darwin-Libc/: Makefile.am  libxprintf.pc.in
lib/Darwin-Libc/darwin/: x_libc_private.h
lib/Darwin-Libc/fbsdcompat/: x__fpmath.h  x_fpmath.h
lib/Darwin-Libc/fbsdcompat/sys/: x_endian.h
lib/Darwin-Libc/gdtoa/: x_arith.h  x_gd_qnan.h
lib/Darwin-Libc/gdtoa/FreeBSD/: _hdtoa.c  _ldtoa.c  gdtoa-dtoa.c
lib/Darwin-Libc/gdtoa/gdtoa/: dmisc.c  gdtoa.c  gmisc.c  misc.c  x_gdtoa.h  x_gdtoaimp.h
lib/Darwin-Libc/include/: x__stdio.h  x_math.h  x_stdio.h  x_stdlib.h  x_vis.h
lib/Darwin-Libc/locale/FreeBSD/: fix_grouping.c
lib/Darwin-Libc/stdio/: x_xprintf_domain.h  xprintf_all_in_one.c  xprintf_comp.c  xprintf_domain.c  xprintf_exec.c
lib/Darwin-Libc/stdio/FreeBSD/: fflush.c  fvwrite.c  makebuf.c  stdio.c  vasprintf.c  vdprintf.c  vsnprintf.c  wsetup.c  x_floatio.h  x_fvwrite.h  x_local.h  x_printflocal.h  x_xprintf_private.h  xprintf.c  xprintf_errno.c  xprintf_float.c  xprintf_hexdump.c  xprintf_int.c  xprintf_quote.c  xprintf_str.c  xprintf_time.c  xprintf_vis.c
lib/Darwin-Libc/stdlib/FreeBSD/: reallocf.c
lib/includes/: Makefile.am
lib/includes/libxprintf/: libxprintf.h  libxprintf_visibility.h
scripts/: config_native.sh
tests/: Makefile.am  test_xprintf.c  xprintf_callback.c  xprintf_callback.h
